--- a/Shooting the Audience.csproj
+++ b/Shooting the Audience.csproj
@@ -6,4 +6,7 @@
     <EnableDynamicLoading>true</EnableDynamicLoading>
     <RootNamespace>ShootingtheAudience</RootNamespace>
   </PropertyGroup>
+  <ItemGroup>
+    <Folder Include="scripts\preys\" />
+  </ItemGroup>
 </Project>
